Added event handler on menu links, hover effect for button link for phone and email

--- a/src/index.html
+++ b/src/index.html
@@ -380,9 +380,17 @@
                 <div class="info__text">
                   вул. М. Грушевського, 6<br>
                   Київ, 01001<br>
-                  тел. +38 (044) 278-13-57<br>
-                  факс +38 (044) 278-74-54<br>
-                  e-mail: info@namu.kiev.ua
+                  <a class="info__link" href="tel:+380442781357">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <br>
+                  <a class="info__link" href="tel:+3804427874545">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <br>
+                  <a class="info__link" href="mailto:info@namu.kiev.ua">
+                    e-mail: info@namu.kiev.ua
+                  </a>
                 </div>
               </div>
             </div>
@@ -465,7 +473,7 @@
             Designed by Zhyriada Marina
           </p>
           <p class="copyright__text">
-            Copyright © 2019. All Rights Reserved
+            Copyright © 2021. All Rights Reserved
           </p>
         </div>
       </div>
