--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,9 @@
         >
       </nav>
     </header>
-
     <main class="main">
       <section class="main__section art-museum">
         <p class="art-museum__event">події</p>
-
         <div class="art-museum__wrapper">
           <h1 class="art-museum__heading">худож<span class="art-museum__letters">ній</span> музей</h1>
           <button class="art-museum__button">
@@ -68,13 +66,10 @@
 
         <div class="art-museum__img-container"></div>
       </section>
-
       <section class="main__section actual-event">
         <h2 class="actual-event__title">Актуальні події</h2>
         <div class="actual-event__wrapper">
-          <div class="actual-event__img">
-            <img src="./images/Photo_1.jpg" alt="photo">
-          </div>
+          <div class="actual-event__img actual-event__img--one"></div>
           <div class="actual-event__info">
             <h3 class="actual-event__subtitle">
               виставка<span class="actual-event__date">26.08-29.11.2019</span>
@@ -95,47 +90,30 @@
               Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
             </p>
           </div>
-          <div class="actual-event__img">
-            <img src="./images/Photo_2.jpg" alt="photo">
+          <div class="actual-event__img actual-event__img--two"></div>
+        </div>
+      </section>
+      <div class="main__classicism-background">
+        <section class="main__section classicism">
+          <div class="classicism__info">
+            <h3 class="classicism__subtitle">
+              лекція<span class="classicism__date">26/08/2019 - 11:00</span>
+            </h3>
+            <h4 class="classicism__name">Від класицизму до романтизму</h4>
           </div>
-        </div>
-      </section>
-
-      <div class="main__classicism-background"></div>
-
-      <section class="main__section classicism">
-        <div class="classicism__info">
-          <h3 class="classicism__subtitle">
-            лекція<span class="classicism__date">26/08/2019 - 11:00</span>
-          </h3>
-          <h4 class="classicism__name">Від класицизму до романтизму</h4>
-        </div>
-      </section>
-
+        </section>
+      </div>
       <section class="main__section gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__album">
-          <div class="gallery__img">
-            <img src="./images/img_1.jpg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="./images/img_2.jpg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="./images/img_3.jpg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="./images/img_4.jpg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="./images/img_5.jpg" alt="">
-          </div>
-          <div class="gallery__img">
-            <img src="./images/img_6.jpg" alt="">
-          </div>
+          <div class="gallery__img gallery__img--one"></div>
+          <div class="gallery__img gallery__img--two"></div>
+          <div class="gallery__img gallery__img--three"></div>
+          <div class="gallery__img gallery__img--four"></div>
+          <div class="gallery__img gallery__img--five"></div>
+          <div class="gallery__img gallery__img--six"></div>
         </div>
       </section>
-
       <div class="main__subscription-background">
         <section class="main__section subscription">
           <div class="subscription__wrapper">
@@ -161,54 +139,54 @@
         </section>
       </div>
     </main>
-
     <footer class="footer">
       <div class="footer__top">
-        <!-- <div class="footer__social-media">
-          <div class="footer__logo"></div>
-          <div class="footer__facebook-logo"></div>
-          <div class="footer__instagram-logo"></div>
-        </div> -->
-
-        <div class="footer__timetable timetable">
-          <h3 class="timetable__title">Графік роботи</h3>
-          <ul class="timetable__schedule">
-            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> середа</li>
-            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> четвер</li>
-            <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> п’ятниця</li>
-            <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> субота</li>
-            <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> неділя</li>
+        <div class="footer__logo"></div>
+        <div class="footer__media">
+          <div class="footer__facebook-logo">
+            <a href="https://www.facebook.com/"><img src="./images/Facebook.png" alt=""></a>
+          </div>
+          <div class="footer__instagram-logo">
+            <a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a>
+          </div>
+        </div>
+        <div class="footer__container">
+          <div class="footer__timetable timetable">
+            <h3 class="timetable__title">Графік роботи</h3>
+            <ul class="timetable__schedule">
+              <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> середа</li>
+              <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> четвер</li>
+              <li class="timetable__time"><span class="timetable__style">12:00 — 20:00</span> п’ятниця</li>
+              <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> субота</li>
+              <li class="timetable__time"><span class="timetable__style">11:00 — 19:00</span> неділя</li>
+            </ul>
+            <p class="timetable__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до&nbsp; закриття музею</p>
+          </div>
+          <div class="footer__contacts contacts">
+            <h3 class="contacts__title">Контакти:</h3>
+            <p class="contacts__info">
+              вул. М. Грушевського, 6; Київ, 01001 тел.<a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a> факс&nbsp;+38&nbsp;(044)&nbsp;278-74-54 e-mail:<a href="mailto:info@namu.kiev.ua" class="contacts__link">info@namu.kiev.ua</a>
+            </p>
+          </div>
+          <div class="footer__separator"></div>
+          <ul class="footer__list footer__list--first">
+            <li class="footer__item"><a href="#" class="footer__link">Галерея</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Виставки та події</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Відвідування</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Стати нашим другом</a></li>
           </ul>
-          <p class="timetable__text">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину до&nbsp; закриття музею</p>
+          <ul class="footer__list footer__list--second">
+            <li class="footer__item"><a href="#" class="footer__link">Про Нас</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Магазин</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
+            <li class="footer__item"><a href="#" class="footer__link">Контакти</a></li>
+          </ul>
         </div>
-
-        <div class="footer__contacts contacts">
-          <h3 class="contacts__title">Контакти:</h3>
-          <p class="contacts__info">вул. М. Грушевського, 6; Київ, 01001 тел.&nbsp;+38&nbsp;(044)&nbsp;278-13-57 факс&nbsp;+38&nbsp;(044)&nbsp;278-74-54 e-mail:&nbsp;info@namu.kiev.ua</p>
-        </div>
-
-        <div class="footer__separator"></div>
-
-        <ul class="footer__list">
-          <li class="footer__item"><a href="#" class="footer__link">Галерея</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Виставки та події</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Відвідування</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Стати нашим другом</a></li>
-        </ul>
-
-        <ul class="footer__list">
-          <li class="footer__item"><a href="#" class="footer__link">Про Нас</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Магазин</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
-          <li class="footer__item"><a href="#" class="footer__link">Контакти</a></li>
-        </ul>
       </div>
-
       <div class="footer__bottom">
         <div class="footer__copytight">Copyright © 2019. All Rights Reserved.</div>
         <div class="footer__design">Designed by Zhyriada Marina</div>
       </div>
-
     </footer>
   </body>
 </html>
