--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
@@ -274,7 +274,7 @@
         </nav>
       </div>
       <div class="footer__copyrigth">
-        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Copyright © 2021. All Rights Reserved.</span>
         <span>Designed by Zhyriada Marina</span>
       </div>
     </footer>
