--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
             <a href="tel:+38 (044) 278-74-54" class="general-info__link">
               факс +38 (044) 278-74-54
             </a>
-            <a href="mailito:info@namu.kiev.ua" class="general-info__link">
+            <a href="mailto:info@namu.kiev.ua" class="general-info__link">
               e-mail: info@namu.kiev.ua
             </a>
           </div>
