--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -14,6 +16,192 @@
         </div>
       </div>
     </header>
+
+    <div class="events">
+      <div class="events__container ">
+        <div class="container">
+          <h2 class="events__heading">Актуальні події</h2>
+          <div class="events__left">
+            <img
+            src="./images/events__left-img.png"
+            alt="Йду і повертаюсь"
+            class="events__left-img"
+          >
+            <div class="events__title content">
+              <div class="content__heading">
+                <span class="content__small-heading">Виставка</span>
+                <span class="content__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="content__big-heading">Йду і повертаюсь</h3>
+              <p class="content__title">Національний Художній Музей України презентує
+            унікальну частину колекції Градобанку
+              - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="events__right">
+            <img
+            src="./images/events__right-img.png"
+            alt="І спогади і мрії"
+            class="events__right-img"
+          >
+            <div class="events__title content">
+              <div class="content__heading">
+                <span class="content__small-heading">Виставка</span>
+                <span class="content__date">26.08-29.11.2019</span>
+              </div>
+              <h3 class="content__big-heading">І спогади і мрії</h3>
+              <p class="content__title">Національний художній музей України
+              до 100 річчя від дня народження видатної української художниці
+              Тетяни Яблонської відкриває ретроспективну ювілейну виставку
+              «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__center">
+          <div class="events__center-img">
+            <!-- <img
+            src="./images/events__center-img.png"
+            alt="Від класицизму до романтизму"
+          > -->
+
+            <div class="events__center-title content">
+              <div class="content__heading">
+                <span class="content__small-heading">Лекція</span>
+                <span class="content__date">26/08/2019 - 11:00</span>
+              </div>
+              <h3 class="content__big-heading">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="gallery">
+      <div class="container">
+        <h2 class="events__heading">Галерея</h2>
+        <div class="gallery__photos">
+          <div class="gallery__photo1"></div>
+          <div class="gallery__photo2"></div>
+          <div class="gallery__photo3"></div>
+          <div class="gallery__photo4"></div>
+          <div class="gallery__photo5"></div>
+          <div class="gallery__photo6"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="subscription">
+      <div class="subscription__container container">
+        <h3 class="subscription__heading">Підписка</h3>
+        <span class="subscription__title">Бути в курсі всіх актуальних подій та останніх новин.</span>
+        <form action="subscription" class="subscription__form">
+          <input
+            type="email"
+            name=""
+            id=""
+            class="subscription__email"
+            placeholder="E-mail"
+          >
+
+          <button class="subscription__button">
+            <img src="./images/bracket.svg" alt="bracket">
+          </button >
+        </form>
+
+      </div>
+    </div>
+
+    <footer class="footer">
+      <div class="footer__container container">
+        <div class="footer__media">
+          <img
+            src="./images/logo_NAMU.png"
+            alt="NAMU"
+            class="footer__logo"
+          >
+          <div class="footer__media-icons">
+            <a href="#">
+              <img src="./images/Facebook.png" alt="facebook">
+            </a>
+            <a href="#">
+              <img src="./images/instagram.png" alt="instagram">
+            </a>
+          </div>
+        </div>
+        <div class="footer__work-shedule">
+          <span class="footer__work-heading">Графік роботи</span>
+          <p class="footer__work-title">
+            <span class="footer__work-strong">12:00 — 20:00</span> середа
+            <span class="footer__work-strong">12:00 — 20:00</span> четвер
+            <span class="footer__work-strong">12:00 — 20:00</span> п’ятниця
+            <span class="footer__work-strong">11:00 — 19:00</span> субота
+            <span class="footer__work-strong">11:00 — 19:00</span> неділя
+          </p>
+          <p class="footer__work-title">Вихідні понеділок, вівторок<br>Каса припиняє роботу за 1 годину<br>до закриття музею</p>
+        </div>
+
+        <div class="footer__contacts">
+          <span class="footer__contacts-heading">Контакти:</span>
+          <a
+            href="https://goo.gl/maps/YJsRzaeBKzvKVCZs6"
+            target="_blank"
+            rel="noopener"
+            class="footer__contacts-link"
+          >
+            вул. М. Грушевського, 6;<br> Київ, 01001
+          </a>
+          <a href="tel:+380442781357" class="footer__contacts-link">тел. +38 (044) 278-13-57</a>
+          <a href="tel:+380442787454" class="footer__contacts-link">факс +38 (044) 278-74-54</a>
+          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">e-mail: info@namu.kiev.ua</a>
+        </div>
+        <div class="footer__stick"></div>
+        <div class="footer__nav">
+          <div>
+            <ul class="footer__nav-left">
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Галерея</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Виставки та події</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Відвідування</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Стати нашим другом</a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <ul class="footer__nav-right">
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Про Нас</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Магазин</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Блог</a>
+              </li>
+              <li class="footer__nav-item">
+                <a href="#" class="footer__nav-link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <div class="copiright">
+      <div class="copiright__container container">
+        <span>Copyright © 2019. All Rights Reserved.</span>
+        <span>Designed by Zhyriada Marina</span>
+      </div>
+    </div>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
