--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,24 @@
   <body>
     <header class="header">
       <div class="header__container container">
-        <div class="header__img">
-          <img src="./images/header-muzej-1800x1200.png" alt="muzej">
-        </div>
+
       </div>
     </header>
+    <div class="tickets">
+      <!-- <div class="tickets__events">
+        <span class="tickets__events-stick"></span>
+        <span class="tickets__events-title">Події</span>
+      </div> -->
+      <div class="tickets__container">
+        <div class="tickets__wrapper">
+          <h1 class="tickets__heading">Худож<span class="tickets__heading-letters">ній</span><br>музей</h1>
+          <button class="tickets__button">
+            <div class="tickets__button-title">Квитки</div>
+            <div class="tickets__button-img"><img src="./images/bracket.svg" alt="bracket"></div>
+          </button>
+        </div>
+      </div>
+    </div>
 
     <div class="events">
       <div class="events__container ">
