--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             width="24"
             height="24"
           >
-          <a class="header__logo logo">
+          <a href="#" class="header__logo logo">
             <img
               class="logo__img"
               src="images/logo.svg"
@@ -38,7 +38,7 @@
               alt="Сховати меню"
               width="20"
               height="20"
-          >
+            >
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="#gallery" class="nav__link">
@@ -81,8 +81,16 @@
                 </a>
               </li>
             </ul>
+            <a href ="#" class="nav__logo logo">
+              <img
+                class="logo__img"
+                src="images/logo-white.svg"
+                alt="Логотип Художнього музею"
+                width="35"
+                height="42"
+              >
+            </a>
           </div>
-
         </nav>
       </div>
     </header>
