--- a/src/index.html
+++ b/src/index.html
@@ -178,7 +178,7 @@
             <input
               type="submit"
               class="form__button"
-              value="."
+              value=">"
             >
           </form>
         </div>
@@ -200,7 +200,7 @@
               <a href="#" class="general-info__instagram">
                 <img
                   class="general-info__facebook-logo"
-                  src="images/Vector.svg"
+                  src="images/insta-icon.a0ff6823.svg"
                   alt="Логотип інстаграму"
                 >
               </a>
