Fixes after code review

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAMU</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon" href="images/icons/favicon.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -17,6 +18,7 @@
       <div class="header__hamburger hamburger">
 
         <div class="hamburger__wrapper">
+          <div class="hamburger__close-button"></div>
           <div class="hamburger__logo">NA<br>MU</div>
           <nav class="hamburger__nav nav">
             <ul class="nav__list hamburger__nav-list">
@@ -94,7 +96,7 @@
             <div class="event__description description">
               <div class="description__details">
                 <p class="description__type">ВИСТАВКА</p>
-                <p class="description__date">26.08-29.11.2019</p>
+                <p class="description__date">26.08-29.11.2021</p>
               </div>
               <h3 class="description__title">Йду і повертаюсь</h3>
               <p class="description__content">
@@ -112,7 +114,7 @@
             <div class="event__description description">
               <div class="description__details">
                 <p class="description__type">ВИСТАВКА</p>
-                <p class="description__date">26.08-29.11.2019</p>
+                <p class="description__date">26.08-29.11.2021</p>
               </div>
               <h3 class="description__title">І спогади, і мрії</h3>
               <p class="description__content">
@@ -121,19 +123,14 @@
             </div>
           </div>
         </section>
-        <section class="lection" id="attendance">
-
-          <img class="image lection__image"
-            src="./images/photos/background/1.png"
-            alt="Лекція Від класицизму до романтизму"
-          >
+        <section class="lection bottom-margined" id="attendance">
           <div class="lection__rectangle">
             <div class="description">
               <div class="description__details description__details--stretched">
                 <p class="description__type">ЛЕКЦІЯ</p>
-                <p class="description__date">26/08/2019 - 11:00</p>
+                <p class="description__date">26/08/2021 - 11:00</p>
               </div>
-              <h3 class="description__title">Від класицизму до романтизму</h3>
+              <h3>Від класицизму до романтизму</h3>
             </div>
           </div>
         </section>
@@ -261,15 +258,15 @@
               <p class="footer__paragraph">
                 Київ, 01001
               </p>
-              <p class="footer__paragraph">
+              <a href="tel: +38 (044) 278-13-57" class="footer__paragraph">
                 тел. +38 (044) 278-13-57
-              </p>
-              <p class="footer__paragraph">
+              </a>
+              <a href="tel: +38 (044) 278-74-54" class="footer__paragraph">
                 факс +38 (044) 278-74-54
-              </p>
-              <p class="footer__paragraph">
+              </a>
+              <a href="mailto: info@namu.kiev.ua" class="footer__paragraph">
                 e-mail: info@namu.kiev.ua
-              </p>
+              </a>
             </div>
           </div>
         </div>
@@ -319,7 +316,7 @@
       </div>
       <div class="footer__copyright">
         <p class="bottom-margined">Designed by Zhyriada Marina</p>
-        <p>Copyright © 2019. All Rights Reserved.</p>
+        <p>Copyright © 2021. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
