burger menu added & first screen fixed

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,58 @@
   <body>
     <header class="header">
       <div class="header__container container">
-
+        <div class="header__burger burger">
+          <span class="burger__icon"></span>
+        </div>
+        <div class="burger__menu">
+          <div class="burger__container">
+            <div class="burger__logo">
+              <a href="#">
+                <img
+                  src="./images/logo_NAMU.png"
+                  alt="Miami Condo Kings logo"
+                  class="burger__logo-img"
+                >
+              </a>
+            </div>
+            <ul class="burger__nav-list">
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Галерея</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Виставки та події</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Відвідування</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Стати нашим другом</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Про Нас</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Магазин</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Блог</a>
+              </li>
+              <li class="burger__nav-item">
+                <a href="#" class="burger__nav-link">Контакти</a>
+              </li>
+            </ul>
+            <div class="burger__search">
+              <img src="./images/search.png" alt="search-icon">
+            </div>
+          </div>
+        </div>
       </div>
     </header>
     <div class="tickets">
-      <!-- <div class="tickets__events">
+      <div class="tickets__events">
         <span class="tickets__events-stick"></span>
         <span class="tickets__events-title">Події</span>
-      </div> -->
+      </div>
       <div class="tickets__container">
         <div class="tickets__wrapper">
           <h1 class="tickets__heading">Худож<span class="tickets__heading-letters">ній</span><br>музей</h1>
