--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NA MU</title>
+    <title>NAMU</title>
+    <link rel="icon" href="images/NA MU.png">
     <link rel="stylesheet" href="./styles/index.scss">
   </head>
   <body>
