--- a/src/index.html
+++ b/src/index.html
@@ -27,14 +27,14 @@
         </label>
         <div class="menu nav__menu">
           <ul class="menu__list">
-            <li class="menu__item"><a href="#" class="menu__link">Галерея</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Виставки та події</a></li>
+            <li class="menu__item"><a href="#gallery" class="menu__link">Галерея</a></li>
+            <li class="menu__item"><a href="#events" class="menu__link">Виставки та події</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Відвідування</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Стати нашим другом</a></li>
+            <li class="menu__item"><a href="#subscription" class="menu__link">Стати нашим другом</a></li>
             <li class="menu__item"><a href="#" class="menu__link">Про Нас</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Магазин</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Блог</a></li>
-            <li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
+            <li class="menu__item"><a href="#shop" class="menu__link">Магазин</a></li>
+            <li class="menu__item"><a href="#blog" class="menu__link">Блог</a></li>
+            <li class="menu__item"><a href="#contacts" class="menu__link">Контакти</a></li>
           </ul>
           <label for="menu__search" class="menu__search-logo">
             <img src="./images/Search.svg" alt="search-logo">
@@ -54,7 +54,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="main__section art-museum">
+      <section class="main__section art-museum" id="shop">
         <p class="art-museum__event">події</p>
         <div class="art-museum__wrapper">
           <h1 class="art-museum__heading">худож<span class="art-museum__letters">ній</span> музей</h1>
@@ -66,7 +66,7 @@
 
         <div class="art-museum__img-container"></div>
       </section>
-      <section class="main__section actual-event">
+      <section class="main__section actual-event" id="events">
         <h2 class="actual-event__title">Актуальні події</h2>
         <div class="actual-event__wrapper">
           <div class="actual-event__img actual-event__img--one"></div>
@@ -93,7 +93,7 @@
           <div class="actual-event__img actual-event__img--two"></div>
         </div>
       </section>
-      <div class="main__classicism-background">
+      <div class="main__classicism-background" id="blog">
         <section class="main__section classicism">
           <div class="classicism__info">
             <h3 class="classicism__subtitle">
@@ -103,7 +103,7 @@
           </div>
         </section>
       </div>
-      <section class="main__section gallery">
+      <section class="main__section gallery" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__album">
           <div class="gallery__img gallery__img--one"></div>
@@ -114,7 +114,7 @@
           <div class="gallery__img gallery__img--six"></div>
         </div>
       </section>
-      <div class="main__subscription-background">
+      <div class="main__subscription-background" id="subscription">
         <section class="main__section subscription">
           <div class="subscription__wrapper">
             <h2 class="subscription__title">Підписка</h2>
@@ -139,7 +139,7 @@
         </section>
       </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="footer__top">
         <div class="footer__logo"></div>
         <div class="footer__media">
@@ -165,21 +165,24 @@
           <div class="footer__contacts contacts">
             <h3 class="contacts__title">Контакти:</h3>
             <p class="contacts__info">
-              вул. М. Грушевського, 6; Київ, 01001 тел.<a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a> факс&nbsp;+38&nbsp;(044)&nbsp;278-74-54 e-mail:<a href="mailto:info@namu.kiev.ua" class="contacts__link">info@namu.kiev.ua</a>
+              вул. М. Грушевського, 6; Київ, 01001
+              тел.<a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a>
+              факс <a href="fax: +38(044)278-74-54" class="contacts__link">+38&nbsp;(044)&nbsp;278-74-54</a>
+              e-mail: <a href="mailto:info@namu.kiev.ua" class="contacts__link">info@namu.kiev.ua</a>
             </p>
           </div>
           <div class="footer__separator"></div>
           <ul class="footer__list footer__list--first">
-            <li class="footer__item"><a href="#" class="footer__link">Галерея</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Виставки та події</a></li>
+            <li class="footer__item"><a href="#gallery" class="footer__link">Галерея</a></li>
+            <li class="footer__item"><a href="#events" class="footer__link">Виставки та події</a></li>
             <li class="footer__item"><a href="#" class="footer__link">Відвідування</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Стати нашим другом</a></li>
+            <li class="footer__item"><a href="#subscription" class="footer__link">Стати нашим другом</a></li>
           </ul>
           <ul class="footer__list footer__list--second">
             <li class="footer__item"><a href="#" class="footer__link">Про Нас</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Магазин</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Блог</a></li>
-            <li class="footer__item"><a href="#" class="footer__link">Контакти</a></li>
+            <li class="footer__item"><a href="#shop" class="footer__link">Магазин</a></li>
+            <li class="footer__item"><a href="#blog" class="footer__link">Блог</a></li>
+            <li class="footer__item"><a href="#contacts" class="footer__link">Контакти</a></li>
           </ul>
         </div>
       </div>
