index.html and gallery.scss were corrected

--- a/src/index.html
+++ b/src/index.html
@@ -165,8 +165,8 @@
           <div class="footer__contacts contacts">
             <h3 class="contacts__title">Контакти:</h3>
             <p class="contacts__info">
-              вул. М. Грушевського, 6; Київ, 01001
-              тел.<a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a>
+              вул. М. Грушевського, 6; Київ, 01001 тел.
+              <a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a>
               факс <a href="fax: +38(044)278-74-54" class="contacts__link">+38&nbsp;(044)&nbsp;278-74-54</a>
               e-mail: <a href="mailto:info@namu.kiev.ua" class="contacts__link">info@namu.kiev.ua</a>
             </p>
