--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
-    <header class="header">
+    <header class="header" id="header">
       <nav class="nav header__nav">
         <input
           type="checkbox"
@@ -141,7 +141,7 @@
     </main>
     <footer class="footer" id="contacts">
       <div class="footer__top">
-        <div class="footer__logo"></div>
+        <a href="#header"><div class="footer__logo"></div></a>
         <div class="footer__media">
           <div class="footer__facebook-logo">
             <a href="https://www.facebook.com/"><img src="./images/Facebook.png" alt=""></a>
@@ -164,12 +164,12 @@
           </div>
           <div class="footer__contacts contacts">
             <h3 class="contacts__title">Контакти:</h3>
-            <p class="contacts__info">
-              вул. М. Грушевського, 6; Київ, 01001 тел.
-              <a href="tel:+38(044)278-13-57" class="contacts__link">&nbsp;+38&nbsp;(044)&nbsp;278-13-57</a>
-              факс <a href="fax: +38(044)278-74-54" class="contacts__link">+38&nbsp;(044)&nbsp;278-74-54</a>
+            <div class="contacts__info">
+              <p class="contacts__address">вул. М. Грушевського, 6; Київ, 01001</p>
+              тел.<a href="tel:+38(044)278-13-57" class="contacts__link">+38 (044) 278-13-57</a>
+              факс <a href="fax: +38(044)278-74-54" class="contacts__link">+38 (044) 278-74-54</a>
               e-mail: <a href="mailto:info@namu.kiev.ua" class="contacts__link">info@namu.kiev.ua</a>
-            </p>
+            </div>
           </div>
           <div class="footer__separator"></div>
           <ul class="footer__list footer__list--first">
@@ -187,7 +187,7 @@
         </div>
       </div>
       <div class="footer__bottom">
-        <div class="footer__copytight">Copyright © 2019. All Rights Reserved.</div>
+        <div class="footer__copytight">Copyright © 2021. All Rights Reserved.</div>
         <div class="footer__design">Designed by Zhyriada Marina</div>
       </div>
     </footer>
