--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="./icons/site_logo.png"
+      type="image/x-icon"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=IBM+Plex+Sans:wght@300;400;500;600;700:900&display=swap"
+      rel="stylesheet">
   </head>
+
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="page-header header">
+      <div class="container">
+        <div class="header__top top">
+          <nav class="header__nav">
+            <img
+              class="header__burger"
+              src="./images/burger.png" alt="">
+          </nav>
+          <span class="header__logo">NA<br>MU</span>
+        </div>
+      </div>
+
+      <div class="header__content">
+        <h1 class="header__title">худож<span class="header__title--decor">ній</span><br>музей
+        </h1>
+
+        <h1 class="header__title--mobile">
+          художній<br>музей
+        </h1>
+
+        <a href="#" class="header__button">
+          квитки
+        </a>
+      </div>
+      <div class="header__button-mobile">
+        <a href="#" class="header__button-link">
+          квитки
+        </a>
+        <a href="#" class="header__button-arrow">></a>
+      </div>
+    </header>
+
+    <main>
+      <section class="main__event event">
+        <div class="event__container container">
+          <h2 class="event__title">
+            Актуальні події
+          </h2>
+          <div class="event__row">
+
+            <picture class="event__image">
+              <source media="(max-width: 768px)" srcset="./images/picture_panorama_280x210.jpg">
+              <source media="(max-width: 1320px)" srcset="./images/picture_panorama_700x520.jpg">
+              <source media="(max-width: 1550px)" srcset="./images/picture_panorama_670x520.jpg">
+              <img
+                class="event__img"
+                src="./images/picture_panorama_870x520.jpg"
+                alt="морська панорама"
+              >
+            </picture>
+
+
+            <div class="event__info">
+              <div class="event__schedule">
+                <div class="event__type">виставка</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__subtitle">Йду і повертаюсь
+              </h3>
+              <p class="event__description">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+
+          <div class="event__row--reverse">
+            <div class="event__info">
+              <div class="event__schedule">
+                <div class="event__type">виставка</div>
+                <div class="event__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="event__subtitle">І спогади і мрії
+              </h3>
+              <p class="event__description">
+                Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+            <picture class="event__image">
+              <source media="(max-width: 768px)" srcset="./images/picture_girl_and_bird_280x210.jpg">
+              <source media="(max-width: 1320px)" srcset="./images/picture_girl_and_bird_700x520.jpg">
+              <source media="(max-width: 1550px)" srcset="./images/picture_girl_and_bird_670x520.jpg">
+              <img
+                class="event__img"
+                src="./images/picture_girl_and_bird_870x520.jpg"
+                alt="дівчина в національному костюмі та павич"
+              >
+            </picture>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
