--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
               <a href="#">
                 <img
                   src="./images/logo_NAMU.png"
-                  alt="Miami Condo Kings logo"
+                  alt="NAMU"
                   class="burger__logo-img"
                 >
               </a>
@@ -56,6 +56,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </header>
     <div class="tickets">
@@ -120,11 +121,6 @@
 
         <div class="events__center">
           <div class="events__center-img">
-            <!-- <img
-            src="./images/events__center-img.png"
-            alt="Від класицизму до романтизму"
-          > -->
-
             <div class="events__center-title content">
               <div class="content__heading">
                 <span class="content__small-heading">Лекція</span>
@@ -147,6 +143,12 @@
           <div class="gallery__photo4"></div>
           <div class="gallery__photo5"></div>
           <div class="gallery__photo6"></div>
+        </div>
+        <div class="gallery__points">
+          <div class="gallery__point black__point"></div>
+          <div class="gallery__point"></div>
+          <div class="gallery__point"></div>
+          <div class="gallery__point"></div>
         </div>
       </div>
     </div>
@@ -182,10 +184,18 @@
           >
           <div class="footer__media-icons">
             <a href="#">
-              <img src="./images/Facebook.png" alt="facebook">
+              <img
+              src="./images/Facebook.png"
+              alt="facebook"
+              class="footer__media-fb"
+              >
             </a>
             <a href="#">
-              <img src="./images/instagram.png" alt="instagram">
+              <img
+              src="./images/instagram.png"
+              alt="instagram"
+              class="footer__media-inst"
+              >
             </a>
           </div>
         </div>
