--- a/src/index.html
+++ b/src/index.html
@@ -27,16 +27,16 @@
             </div>
             <ul class="burger__nav-list">
               <li class="burger__nav-item">
-                <a href="#" class="burger__nav-link">Галерея</a>
+                <a href="#gallery" class="burger__nav-link">Галерея</a>
               </li>
               <li class="burger__nav-item">
-                <a href="#" class="burger__nav-link">Виставки та події</a>
+                <a href="#events" class="burger__nav-link">Виставки та події</a>
               </li>
               <li class="burger__nav-item">
                 <a href="#" class="burger__nav-link">Відвідування</a>
               </li>
               <li class="burger__nav-item">
-                <a href="#" class="burger__nav-link">Стати нашим другом</a>
+                <a href="#subscription" class="burger__nav-link">Стати нашим другом</a>
               </li>
               <li class="burger__nav-item">
                 <a href="#" class="burger__nav-link">Про Нас</a>
@@ -48,7 +48,7 @@
                 <a href="#" class="burger__nav-link">Блог</a>
               </li>
               <li class="burger__nav-item">
-                <a href="#" class="burger__nav-link">Контакти</a>
+                <a href="#footer" class="burger__nav-link">Контакти</a>
               </li>
             </ul>
             <div class="burger__search">
@@ -59,7 +59,7 @@
 
       </div>
     </header>
-    <div class="tickets">
+    <div class="tickets" id="tickets">
       <div class="tickets__events">
         <span class="tickets__events-stick"></span>
         <span class="tickets__events-title">Події</span>
@@ -75,7 +75,7 @@
       </div>
     </div>
 
-    <div class="events">
+    <div class="events" id="events">
       <div class="events__container ">
         <div class="container">
           <h2 class="events__heading">Актуальні події</h2>
@@ -133,7 +133,7 @@
       </div>
     </div>
 
-    <div class="gallery">
+    <div class="gallery" id="gallery">
       <div class="container">
         <h2 class="events__heading">Галерея</h2>
         <div class="gallery__photos">
@@ -153,7 +153,7 @@
       </div>
     </div>
 
-    <div class="subscription">
+    <div class="subscription" id="subscription">
       <div class="subscription__container container">
         <h3 class="subscription__heading">Підписка</h3>
         <span class="subscription__title">Бути в курсі всіх актуальних подій та останніх новин.</span>
@@ -161,20 +161,24 @@
           <input
             type="email"
             name=""
-            id=""
+            id="email"
             class="subscription__email"
             placeholder="E-mail"
           >
 
           <button class="subscription__button">
-            <img src="./images/bracket.svg" alt="bracket">
+            <img
+              src="./images/bracket.svg"
+              alt="bracket"
+              form="email"
+            >
           </button >
         </form>
 
       </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="footer__container container">
         <div class="footer__media">
           <img
@@ -230,16 +234,16 @@
           <div>
             <ul class="footer__nav-left">
               <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Галерея</a>
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
               </li>
               <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Виставки та події</a>
+                <a href="#events" class="footer__nav-link">Виставки та події</a>
               </li>
               <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Відвідування</a>
+                <a href="#tickets" class="footer__nav-link">Відвідування</a>
               </li>
               <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Стати нашим другом</a>
+                <a href="#subscription" class="footer__nav-link">Стати нашим другом</a>
               </li>
             </ul>
           </div>
@@ -255,7 +259,7 @@
                 <a href="#" class="footer__nav-link">Блог</a>
               </li>
               <li class="footer__nav-item">
-                <a href="#" class="footer__nav-link">Контакти</a>
+                <a href="#footer" class="footer__nav-link">Контакти</a>
               </li>
             </ul>
           </div>
