gallery and subscrigition added

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
     <link
       rel="shortcut icon"
       href="./icons/site_logo.png"
-      type="image/x-icon"
-    >
+      type="image/x-icon">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
@@ -24,7 +23,8 @@
           <nav class="header__nav">
             <img
               class="header__burger"
-              src="./images/burger.png" alt="">
+              src="./icons/burger.png"
+              alt="">
           </nav>
           <span class="header__logo">NA<br>MU</span>
         </div>
@@ -50,7 +50,7 @@
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <section class="main__event event">
         <div class="event__container container">
           <h2 class="event__title">
@@ -65,25 +65,24 @@
               <img
                 class="event__img"
                 src="./images/picture_panorama_870x520.jpg"
-                alt="морська панорама"
-              >
+                alt="морська панорама">
             </picture>
-
 
             <div class="event__info">
               <div class="event__schedule">
                 <div class="event__type">виставка</div>
                 <div class="event__date">26.08-29.11.2019</div>
               </div>
-              <h3 class="event__subtitle">Йду і повертаюсь
+              <h3 class="event__subtitle">
+                Йду і повертаюсь
               </h3>
               <p class="event__description">
                 Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
                 мистецтво другої половини 1980-1995 років.
               </p>
             </div>
-          </div>
 
+          </div>
 
           <div class="event__row--reverse">
             <div class="event__info">
@@ -91,7 +90,8 @@
                 <div class="event__type">виставка</div>
                 <div class="event__date">26.08-29.11.2019</div>
               </div>
-              <h3 class="event__subtitle">І спогади і мрії
+              <h3 class="event__subtitle">
+                І спогади і мрії
               </h3>
               <p class="event__description">
                 Національний художній музей України до 100 річчя від дня народження видатної української художниці
@@ -103,20 +103,119 @@
               <source media="(max-width: 768px)" srcset="./images/picture_girl_and_bird_280x210.jpg">
               <source media="(max-width: 1320px)" srcset="./images/picture_girl_and_bird_700x520.jpg">
               <source media="(max-width: 1550px)" srcset="./images/picture_girl_and_bird_670x520.jpg">
-              <img
-                class="event__img"
-                src="./images/picture_girl_and_bird_870x520.jpg"
-                alt="дівчина в національному костюмі та павич"
-              >
+              <img src="./images/picture_girl_and_bird_870x520.jpg" alt="дівчина в національному костюмі та павич">
             </picture>
           </div>
         </div>
+        <div class="event__single">
+          <picture class="event__panorama">
+            <source media="(max-width: 768px)" srcset="./images/picture_panorama_wide_320x210.jpg">
+            <source media="(max-width: 1320px)" srcset="./images/picture_panorama_wide_700X390.jpg">
+            <source media="(max-width: 1550px)" srcset="./images/picture_panorama_wide_1280x550.jpg">
+            <source media="(max-width: 1550px)" srcset="./images/picture_panorama_wide_1440x619.jpg">
+            <img class="event__panorama-img" src="./images/picture_panorama_wide_1920x674.jpg"
+              alt="панорама заходу сонця">
+          </picture>
+          <div class="event__info_wide">
+            <div class="event__schedule_wide">
+              <div class="event__type">лекція</div>
+              <div class="event__date">26/08/2019 - 11:00</div>
+            </div>
+            <h3 class="event__subtitle_decor">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
       </section>
-    </main>
-    <footer>
 
+      <section class="main__gallery gallery">
+        <div class="gallery__container container">
+          <h2 class="gallery__title">
+            Галерея
+          </h2>
+          <div class="gallery__grid">
+            <img
+              class="gallery__image"
+              src="./images/gallery_woman.jpg"
+              alt="Наречена в національному костюмі">
+            <img
+              class="gallery__image"
+              src="./images/gallery_willage.jpg"
+              alt="зимове село">
+            <img
+              class="gallery__image"
+              src="./images/gallery_geese.jpg"
+              alt="гуси">
+            <img
+              class="gallery__image"
+              src="./images/gallery_resting_in_park.jpg"
+              alt="відпочинок у парку">
+            <img
+              class="gallery__image"
+              src="./images/gallery_evening_sea.jpg"
+              alt="вечірнє море">
+            <img
+              class="gallery__image"
+              src="./images/gallery_people.jpg"
+              alt="толока">
+          </div>
+        </div>
+      </section>
+
+      <section class="main__subscribtion subscribtion">
+
+        <h2 class="subscribtion__title">
+          Підписка
+        </h2>
+
+        <span class="subscribtion__subtitle">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </span>
+
+        <form action="POST" class="subscribtion__form">
+          <input
+            class="subscribtion__email"
+            type="email"
+            placeholder="Email"
+            required
+          >
+          <input
+            class="subscribtion__submit"
+            type="submit"
+            value=">"
+          >
+        </form>
+
+      </section>
+
+    </main>
+
+
+    <footer class="footer">
+      <!-- <div class="footer__container container">
+        <div class="footer__logo">
+          <img
+            class="footer__site-logo"
+            src="./icons/site_logo.png"
+            alt="NAMU logo"
+          >
+          <div class="footer__social">
+            <img class="footer__facebook" src="./icons/Facebook.png" alt="facebook icon">
+            <img class="footer__instagram" src="./icons/instagram.png" alt="instagram icon">
+          </div>
+        </div>
+
+        <div class="footer__schedule schelule">
+          <h4 class="schedule__title">Графік роботи</h4>
+
+        </div>
+      </div> -->
     </footer>
+
+
     <script type="text/javascript" src="scripts/main.js"></script>
+
+
   </body>
 
 </html>
